# image_gpt_service_public

./: .black  .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
app/api/endpoints/: image_routes.py
app/api/routers/: routers.py
app/core/: config.py
app/enums/: enums.py
app/logs/: loggers.py
app/services/: openai_image_generator.py  s3client.py
app/utils/: common.py
docker/: app.sh
