[tool.poetry]
name = "image-gpt-service"
version = "0.1.0"
description = ""
authors = ["Cheater121 <cheater1211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
openai = "^1.35.13"
aiobotocore = "^2.13.1"
gunicorn = "^22.0.0"
isort = "^5.13.2"
flake8 = "^7.1.0"
black = "^24.4.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
